更新 '新建GKD规则/规则.md'

--- a/新建GKD规则/规则.md
+++ b/新建GKD规则/规则.md
@@ -172,11 +172,11 @@
 
 
 # 注释
-![./public/img.png](./public/img.png)
+![./img.png](./img.png)
 -应用规则-中可以查看所有添加了规则的应用
-![./public/img_1.png](./public/img_1.png)
+![./img_1.png](./img_1.png)
 -应用中-显示的是手机上安装的所有应用
-![./public/img_2.png](./public/img_2.png)
+![./img_2.png](./img_2.png)
 
 跟随订阅 --- 根据应用规则中设置的enable选择启用捕获
 
