规则权重 与 区分全局规则和App规则

--- a/操作手册和使用规则/操作手册.md
+++ b/操作手册和使用规则/操作手册.md
@@ -172,12 +172,20 @@
 
 
 # 注释
-![./img.png](img.png)
--应用规则-中可以查看所有添加了规则的应用
-![./img_1.png](img_1.png)
--应用中-显示的是手机上安装的所有应用
-![./img_2.png](img_2.png)
 
-跟随订阅 --- 根据应用规则中设置的enable选择启用捕获
+`-应用中-显示的是手机上安装的所有应用`
 
-全部启用 --- 全部启用捕获的规则组
+![./static/img.png](./static/img.png)
+
+`-应用规则-中可以查看所有添加了规则的应用`
+
+![./static/img_1.png](./static/img_1.png)
+
+### 批量订阅
+    跟随订阅 --- 根据应用规则中设置的enable选择启用捕获 （在最新版本中已经失效）
+
+    全部启用 --- 全部启用捕获的规则组
+
+###参考地址：https://github.com/gkd-kit/gkd/issues/438
+
+![./static/img_2.png](./static/img_2.png)
