--- a/操作手册和使用规则/选择器示例.md
+++ b/操作手册和使用规则/选择器示例.md
@@ -26,13 +26,11 @@ _示例地址_: https://i.gkd.li/snapshot/1712815078900
 _示例地址_: https://i.gkd.li/snapshot/1712816656651
 #### 这个示例 首先验证了当前页面是否有符合 text^="隐私政策" 的元素，然后 +n LinearLayout 向后查找 内部元素符合 text="同意并继续" 的元素
 
-
-### 通过匹配字符串 定位目标元素
 ```text
-[text^="隐私政策"] +n LinearLayout > [text="同意并继续"]
+[text^="青少年"] <<n [id="android:id/content"] >n [text^="我知道了"]
 ```
-_示例地址_: https://i.gkd.li/snapshot/1712816656651
-#### 这个示例 首先验证了当前页面是否有符合 text^="隐私政策" 的元素，然后 +n LinearLayout 向后查找 内部元素符合 text="同意并继续" 的元素
+_示例地址_: https://i.gkd.li/snapshot/1713152844987
+#### 这个示例 首先判断当前页面为青少年弹窗页面，然后深度遍历 text^="我知道了" 按钮
 
 
 
