规则权重 与 特殊权限页面

--- a/操作手册和使用规则/操作手册.md
+++ b/操作手册和使用规则/操作手册.md
@@ -189,3 +189,9 @@
 ###参考地址：https://github.com/gkd-kit/gkd/issues/438
 
 ![./static/img_2.png](./static/img_2.png)
+
+##权限设置（定位，通知，电话等系统类权限的规则添加）
+
+    需要注意因为他不是属于当前打开的应用的页面，并且他的权限开关是默认关闭的
+
+    所以需要在规则中配置默认打开（"enable":true）在static.json文件中的apps栏目下有配置实例
