合并审查工具的内容

--- a/操作手册和使用规则/开关权重规则.md
+++ b/操作手册和使用规则/开关权重规则.md
@@ -22,6 +22,6 @@
 ![./static/img_6.png](./static/img_6.png)
 
 
-### 四、 全局订阅  ——— 开关四 (App规则作用顺序要有限于全局规则)
+### 四、 全局订阅  ——— 开关四 (App规则作用顺序要优先于全局规则)
     基于订阅规则进行分类，全局订阅不受开关一二三影响，作用于所有的app
 ![./static/img_5.png](./static/img_7.png)
