--- a/操作手册和使用规则/选择器示例.md
+++ b/操作手册和使用规则/选择器示例.md
@@ -1,4 +1,4 @@
-### 向后查找兄弟元素 定位目标元素
+## 向后查找兄弟元素 定位目标元素
 
 ```text
 [id="cn.xiaolongonly.andpodsop:id/rl_splash_container"] + [id="cn.xiaolongonly.andpodsop:id/hiad_btn_skip"]
@@ -12,14 +12,14 @@ _示例地址_: https://i.gkd.li/snapshot/1698804432949
 #### 这个示例用 activityImageDraweeView 元素向后定位了 closeImageView 元素
 _示例地址_: https://i.gkd.li/snapshot/1712825259652
 
-### 通过外层元素 定位目标元素
+## 通过外层元素 定位目标元素
 ```text
 [id="com.antfortune.wealth.tablauncher:id/start_guide_viewpage"] >2 [id="com.antfortune.wealth.tablauncher:id/guide_button"]
 ```
 _示例地址_: https://i.gkd.li/snapshot/1712815078900
 #### 这个示例为了定位 guide_button 元素向外层查找了两级找到 start_guide_viewpage 元素
- 
-### 通过匹配字符串 定位目标元素 
+
+## 通过匹配字符串 定位目标元素
 ```text
 [text^="隐私政策"] +n LinearLayout > [text="同意并继续"]
 ```
@@ -31,6 +31,12 @@ _示例地址_: https://i.gkd.li/snapshot/1712816656651
 ```
 _示例地址_: https://i.gkd.li/snapshot/1713152844987
 #### 这个示例 首先判断当前页面为青少年弹窗页面，然后深度遍历 text^="我知道了" 按钮
+
+```text
+[desc*="跳过"][desc.length<10][visibleToUser=true]
+```
+_示例地址_: https://i.gkd.li/snapshot/1713518797430
+#### 这个示例 首先匹配到 desc *= “跳过” 的元素，验证元素内容长度是否小于10，验证 visibleToUser = true
 
 
 
